More number alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ Sidebar styling
 
 #times2 {
 	top: 240px;
+	right: 50px;
 }
 
 .checkpoint p {
